--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>29.12</title>
@@ -11,7 +12,7 @@
 </head>
 <body class="w-full min-h-screen">
     <audio loop>
-        <source src="../src/assets/techno.mp3">
+        <source src="./assets/techno.mp3">
     </audio>
     <div class="w-full min-h-screen flex justify-center items-center font-orbitron">
         <div class="absolute text-white self-start top-20 grid gap-10">
@@ -47,7 +48,7 @@
             </div>
         </div>
         <video autoplay loop muted class="w-full h-screen object-cover absolute -z-10 brightness-15">
-            <source src="../src/assets/testvideo.mp4" type="video/mp4"></source>
+            <source src="./assets/testvideo.mp4" type="video/mp4"></source>
         </video>
     </div>
    
