--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </ul>
             </div>
         </div>
-        <video autoplay loop muted class="w-full h-screen object-cover absolute -z-10 brightness-15">
+        <video autoplay loop muted preload="auto" playsinline class="w-full h-screen object-cover absolute -z-10 brightness-15">
             <source src="./assets/testvideo.mp4" type="video/mp4"></source>
         </video>
     </div>
