--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </button>
         </div>
         <div class=" grid grid-rows-2 md:grid-cols-2 gap-6 text-white">
-            <div id="timer" class="flex gap-4">
+            <div id="timer" class="flex gap-4 justify-center items-center">
                 <div>
                     <p id="days" class="text-3xl">00</p>
                     <span class="text-sm">Days</span>
