change background and audio

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <video autoplay loop muted preload="auto" playsinline class="w-full h-screen object-cover absolute -z-10 brightness-15">
-            <source src="./assets/testvideo.mp4" type="video/mp4"></source>
+            <source src="./assets/technoo.mp4" type="video/mp4"></source>
         </video>
     </div>
    
